@@ -146,6 +146,8 @@
     than the middle.
 89. Middle click volume button to mute/unmute.
 90. Stream/category icons.
+91. When dynamic mod is active, and dynamic tab is not shown, show stop dymamic
+    button.
 
 0.9.2
 -----
